Fix the lisence styling to completely visible the lisence

--- a/css/theme-lava.css
+++ b/css/theme-lava.css
@@ -765,7 +765,7 @@ nav .container {
 }
 .copy-text-bottom {
   left: 24px;
-  bottom:5px;
+  bottom:20px;
   position: absolute;
 }
 .text-panel {
